--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,5 +34,5 @@ html
                                     p WELCOME TO DROPTABLECOMIX! <br /> WE ARE YOUR ONE STOP FOR COMIX FREEDOM
                             hr
                             div(id="copyright")
-                                |site design / logo © 2016 DropTable Students Inc; Arman, Edward, Noah, Tina <br />
+                                |site design / logo © 2016 DropTable Students Inc: Arman, Edward, NaOH, Tina <br />
                                 |rev 2016.3.29.1000
