brightened background for comic page

--- a/views/comic.jade
+++ b/views/comic.jade
@@ -2,7 +2,7 @@ extends pretty
 
 block content
 	div(id="bg")
-		img(src="/images/background.png" alt="")
+		img(src="/images/background_brighter.png" alt="")
 	div(class="container posrel")
 		block content_comic
 		center(style="margin:20px")
