Background image now served by host

--- a/views/pretty.jade
+++ b/views/pretty.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content_layout
 	div(id="bg")
-			img(src="http://prnt00.deviantart.net/a0cd/b/2015/330/9/9d3a908f675d3c05837f62409d994fe0-pn7cuc.jpg" alt="")
+			img(src="/images/background_dash.png" alt="")
 	nav(class="navbar navbar-default navbar-static-top")
 		div(class="container-fluid")
 			div(class="navbar-header")
