--- a/views/editcomic.jade
+++ b/views/editcomic.jade
@@ -85,7 +85,11 @@ block content_comic
 		img(src="/images/icon_pop.png" ng-click="overlaytop(mouseover_overlay);" title="bring to front")
 		| &nbsp
 		img(src="/images/icon_push.png" ng-click="overlaybot(mouseover_overlay);" title="push to back")
-
+	
+	ul
+		each user, i in requestlist
+			li
+				p #{user}
 block content_comment
 	div(class="commentcontainer")
 		div(class="col-md-8 col-md-offset-2")
