--- a/views/requestcomic.jade
+++ b/views/requestcomic.jade
@@ -8,6 +8,8 @@ block content
 		form(class="smallcenter opaquewhite")
 			center
 				h2 #{title}
-				p(class="textgreysmall") s#{description}
+				p(class="textgreysmall") #{description}
 				p(style="margin-top:20px") Request to be on the viewlist:
-				button(class="btn btn-primary" ng-model="#{username}") Submit request as "#{username}"
+				button(class="btn btn-primary" ng-model="#{username}" ng-click="requestlist_add()") Submit request as "#{username}"
+				p(style="margin-top:30px")
+					font(color="red") {{response10}}
