--- a/views/forgotmypassword.jade
+++ b/views/forgotmypassword.jade
@@ -11,8 +11,7 @@ block content_authentication
 
     font(size="2")
       p(style="padding-top:10px")
-        a(href="/auth/register") Registerate
-        
+        a(href="/auth/register") Register
       p
         font(size="2")
         p
