finalized the last bit of styling on master

--- a/views/changepassword.jade
+++ b/views/changepassword.jade
@@ -9,13 +9,13 @@ block content
 			form(method='post', enctype='multipart/form-data', action='/changepassword' style = "text-align:center;")
 
 				p(class="dashboard_a") -New Password-
-				input(type="password" name="newpass" placeholder="Enter New Password...")
+				input(class="form-control" type="password" name="newpass" placeholder="Enter New Password...")
 				p
 				p(class="dashboard_b") -Confirm Password-
-				input(type="password" name="confirmpass" placeholder="Confirm Password...")
+				input(class="form-control" type="password" name="confirmpass" placeholder="Confirm Password...")
 				p
 				p(class="dashboard_a") -Old Password-
-				input(type="password" name="oldpass" placeholder="Enter Old Password...")
+				input(class="form-control" type="password" name="oldpass" placeholder="Enter Old Password...")
 				p
 				p
-				input(type='submit')
+				input(class="btn btn-primary" type='submit')
